# comp24

./: pairing.md
ObaML/: ObaML.opam  dune-project
ObaML/demo_tests/: anf_tests.t  dune
ObaML/lib/: ast.ml  dune  inferencer.ml  inferencerTypes.ml  parser.ml
ObaML/lib/ast/: ast.ml  ast.mli  dune
ObaML/lib/located/: dune  located.ml
ObaML/lib/navi/: dune  navi.ml  navi.mli
ObaML/lib/parse/: ast.ml  dune  lexer.mll  located.ml  navi.ml  parse.ml  parser.mly  semantics.ml  syErr.ml  tokens.mly
ObaML/lib/tests/: infer_tests.ml
ObaML/lib/wrap/: dune  wrap.ml  wrap.mli
