(ocamllex
 (modules lexer))

(menhir
 (modules tokens)
 (flags --only-tokens))

(menhir
 (modules tokens parser)
 (merge_into parser)
 (flags --table --external-tokens Tokens))

(library
 (name Parse)
 (public_name ObaML.Parse)
 (libraries menhirLib Ast Navi Wrap)
 (preprocess
  (pps ppx_expect ppx_deriving.show ppx_deriving.ord ppx_deriving.eq))
 (inline_tests)
 (instrumentation
  (backend bisect_ppx)))
